--- a/Lifestyle & Recreation/Arya/Hours of Sleep VS. All Nighters.ipynb
+++ b/Lifestyle & Recreation/Arya/Hours of Sleep VS. All Nighters.ipynb
@@ -182,7 +182,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "graph.savefig('graphs/all_nighters_V_Sleep.png')"
+    "g.figure.savefig('graphs/all_nighters_V_Sleep.png')"
    ]
   },
   {
