--- a/Demographics/gender_identities.ipynb
+++ b/Demographics/gender_identities.ipynb
@@ -87,7 +87,7 @@
         "plt.figure(figsize=(7, 7))\n",
         "plt.title(\"What do you identify as? [n=92]\")\n",
         "labels=['Female', 'Male', 'Non-binary']\n",
-        "mycolors = [\"#FF76A5\", \"#C067E2\", \"#E06FC4\"]\n",
+        "mycolors = [\"FF76A5\", \"C067E2\", \"E06FC4\"]\n",
         "plt.pie(distribution, autopct='%.1f%%', labels=labels, colors=mycolors)"
       ],
       "metadata": {
