--- a/Demographics/ethnicities.ipynb
+++ b/Demographics/ethnicities.ipynb
@@ -324,7 +324,7 @@
         "\n",
         "plt.figure(figsize=(15, 5))\n",
         "plt.title(\"Which ethnicities do you identify as? [n=91]\")\n",
-        "ax = sns.barplot(y=relevant_data[\"ethnicities\"], x=relevant_data[\"Number of Respondents\"], data=relevant_data, color='#FFD600')\n",
+        "ax = sns.barplot(y=relevant_data[\"ethnicities\"], x=relevant_data[\"Number of Respondents\"], data=relevant_data, color='#FF76A5')\n",
         "plt.xlabel(\"Number of Respondents\")\n",
         "plt.ylabel(\"Ethnicity\")\n",
         "plt.bar_label(ax.containers[0], fmt='%.1f%%')"
