--- a/Demographics/ethnicities.ipynb
+++ b/Demographics/ethnicities.ipynb
@@ -328,6 +328,7 @@
         "plt.xlabel(\"Number of Respondents\")\n",
         "plt.ylabel(\"Ethnicity\")\n",
         "plt.bar_label(ax.containers[0], fmt='%.1f%%')"
+        "plt.savefig(test.png)"
       ],
       "metadata": {
         "colab": {
